Prevent edit and delete buttons from stretching

--- a/src/styles/personal-info.scss
+++ b/src/styles/personal-info.scss
@@ -2,14 +2,6 @@
   display: flex;
   justify-content: center;
 
-  .edit {
-    background-color: #075985;
-
-    svg {
-      fill: white;
-    }
-  }
-
   .content-container {
     width: 100%;
   }
